--- a/server/http/pom.xml
+++ b/server/http/pom.xml
@@ -14,6 +14,11 @@
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>com.jeremie.spring</groupId>
             <artifactId>crisis-rpc-server-common</artifactId>
             <version>1.0.0-SNAPSHOT</version>
@@ -28,10 +33,6 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
         </dependency>
     </dependencies>
     <build>
