--- a/crisis-rpc-demo/services/home-impl/pom.xml
+++ b/crisis-rpc-demo/services/home-impl/pom.xml
@@ -26,26 +26,13 @@
         </dependency>
         <dependency>
             <groupId>com.jeremie.spring</groupId>
-            <artifactId>crisis-rpc-server-http</artifactId>
+            <artifactId>crisis-rpc-server-mina</artifactId>
             <version>1.0.0-SNAPSHOT</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>javax.servlet.jsp</groupId>
-                    <artifactId>jsp-api</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>javax.servlet</groupId>
-                    <artifactId>javax.servlet-api</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>javax.servlet</groupId>
-                    <artifactId>servlet-api</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
