--- a/crisis-rpc-demo/web/home/pom.xml
+++ b/crisis-rpc-demo/web/home/pom.xml
@@ -28,6 +28,18 @@
             <artifactId>crisis-rpc-demo-web-commons</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.jeremie.spring</groupId>
+            <artifactId>crisis-rpc-client</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.jeremie.spring</groupId>
+            <artifactId>crisis-rpc-remote-mina</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
